--- a/docker_projects/exercise_flask_with_mySQL/templates/index.html
+++ b/docker_projects/exercise_flask_with_mySQL/templates/index.html
@@ -22,6 +22,7 @@
       <h4>crazy person of the day:</h4>
       <img src="{{url}}" />
       <p><small>Courtesy: <a href="http://www.buzzfeed.com/copyranter/the-best-cat-gif-post-in-the-history-of-cat-gifs">Buzzfeed</a></small></p>
+      <h5>Visitor count: {{visitor_count}}</h5>
     </div>
   </body>
 </html>
