--- a/docker_projects/exercise_flask_with_mySQL/templates/index.html
+++ b/docker_projects/exercise_flask_with_mySQL/templates/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>crazy person of the day:</h4>
+      <h4>crazy person of the day!:</h4>
       <img src="{{url}}" />
       <p><small>Courtesy: <a href="http://www.buzzfeed.com/copyranter/the-best-cat-gif-post-in-the-history-of-cat-gifs">Buzzfeed</a></small></p>
       <h5>Visitor count: {{visitor_count}}</h5>
